# DatabaseManagement

assign1/: CMakeLists.txt  Makefile  Readme  storage_mgr.c
assign2/: CMakeLists.txt  Makefile  README  buffer_mgr.h  storage_mgr.c
assign3/: CMakeLists.txt  Makefile  dberror.h  readme  record_mgr.c  storage_mgr.c  tables.h
assign4/: CMakeLists.txt  Makefile  README.txt  btree_mgr.c  buffer_mgr.c  record_mgr.h  storage_mgr.c
